--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/KyleAxley/employee-tracker#readme",
   "dependencies": {
+    "cfonts": "^3.1.1",
     "console.table": "^0.10.0",
     "figlet": "^1.5.2",
     "inquirer": "^8.2.4",
